src/pages/ManageProduct/ManageProduct.module.css
.container {
  padding-top: 1rem;
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 2rem;
}

.skeletons {
  width: 50%;
  display: flex;
  flex-direction: column;
  gap: 2rem;
}

.input {
  width: 55%;
}

.input > div {
  border-radius: 20px;
}

.image {
  height: 160px;
  width: 50%;
}

.buttons {
  width: 100%;
  padding: 0 1rem;
  margin: 1rem 0;
  position: sticky;
  bottom: 6rem;
  display: flex;
  gap: 1rem;
  justify-content: center;
}

